--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>Boise Event Rentals</title>
     <base href="/">
 
-    <link rel="preload" as="image" href="/images/hero.webp" type="image/webp">
+    <!-- <link rel="preload" as="image" href="/images/hero.webp" type="image/webp"> -->
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
