update description name for google search

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Boise Event Rentals</title>
+    <title>Final Touch Decor | Custom Signage & Decor Rentals | Boise, ID</title>
     <base href="/">
 
     <!-- <link rel="preload" as="image" href="/images/hero.webp" type="image/webp"> -->
