--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,16 @@
     <title>Final Touch Decor | Custom Signage & Decor Rentals | Boise, ID</title>
     <base href="/">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-98SE5XYCB5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-98SE5XYCB5');
+    </script>
+
     <!-- <link rel="preload" as="image" href="/images/hero.webp" type="image/webp"> -->
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
