change wording for checkout

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     </script>
 
     <title>Final Touch Decor | Custom Signage & Decor Rentals | Boise, ID</title>
-    <meta name="description" content="Rent affordable, customizable wedding and event decor in Boise, Idaho. Final Touch Co. offers signs, mirrors, centerpieces, and more." />
+    <meta name="description" content="Rent affordable, customizable wedding and event decor in Boise, Idaho. Final Touch Decor Co. offers signs, mirrors, centerpieces, and more." />
     <base href="/">
 
     <!-- <link rel="preload" as="image" href="/images/hero.webp" type="image/webp"> -->
